# OGD-recommendation

./: .gitignore  Dockerfile  README.md  dataset-500.csv  dataset-5000.csv  index.css  index.html  index.js  ogd-recommendation.ipynb  pyproject.toml  similarity-lg.npy  similarity-md.npy  similarity-spacy.npy  similarity.npy
scripts/: deduplicate_datasets.py  fetch_api.py  fetch_sparql.py  search.py  store.py  store_profile.html
scripts/milvus/: collection_inspector.py  collection_manager.py
src/api/: app.py
src/api/routers/: search.py  vecrotstore.py
src/search/: __init__.py  service.py
src/utils/: text_cleaning.py
src/vectorstore/: config.yaml  data_store.py  embeddings.py  milvus_client.py  retriever.py  schemas.py
templates/: template.jinja
